--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 									<p>A <strong>Maui.NET (C#)</strong> app that links to an external <strong>PostgreSQL</strong> database, housed on <strong>AWS RDS</strong>. This application is designed to help the end user pay off debt or build a savings 
 									based off of their set percentages. Deployed to <strong>Google Play</strong>, but in testing.</p>
 									<ul class="actions">
-										<li><a class="button style1">Awaiting Google Review</a></li>
+										<li><a class="button style1">To Be Deployed Soon</a></li>
 									</ul>
 								</section>
 							</div>
